--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.13",
     "qs": "^6.14.1",
     "resend": "^6.6.0",
